--- a/work/work1.css
+++ b/work/work1.css
@@ -41,6 +41,5 @@ header button{
      height: 600px; 
      background-image: url("../work/Logo.png"); 
      margin:140px auto 0 auto; 
-     text-align: center;  
-
-  
+     text-align: center;
+  }  
