--- a/work/work1.css
+++ b/work/work1.css
@@ -36,10 +36,17 @@ header button{
 } 
               /* Освновной контент */ 
   /* укрепление здоровья */ 
-  .heads_logo{ 
+  .container{ 
      width: 1296px; 
      height: 600px; 
      background-image: url("../work/Logo.png"); 
-     margin:140px auto 0 auto; 
-     text-align: center;
+     margin:30px auto 0 auto; 
+     display: flex;
+     align-items: center;
+     justify-content: center;
   }  
+.text{
+    color: white;
+    font-size: 24px;
+    text-align: center;
+}
