--- a/work/work1.css
+++ b/work/work1.css
@@ -50,3 +50,103 @@ header button{
     font-size: 24px;
     text-align: center;
 }
+.sianse{
+    margin-top: 100px;
+    margin-bottom: 50px;
+    text-align: center;
+    color: white;
+}
+.parent{
+    color: white;
+    
+}
+.div1{
+    background-image: url("../work/img.png");
+    width: 416px; 
+    height: 540px; 
+    margin-left: 312px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
+.div2{
+    background-image: url("../work/img2.png");
+    width: 416px;
+    height: 258px;
+    margin-left: 752px;
+    margin-top: -539px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
+.div3{
+width: 416px;
+height: 258px;
+background-image: url("../work/img2.png");
+margin-left: 752px;
+margin-top: 20px;
+display: flex;
+align-items: center;
+justify-content: center;
+border-radius: 20px;
+}
+.div4{
+    width: 416px;
+    height: 258px;
+    background-image: url("../work/img2.png");
+    margin-left: 1192px;
+    margin-top: -539px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
+.div5{
+    width: 416px;
+    height: 258px;
+    background-image: url("../work/img2.png");
+    margin-left: 1192px;
+    margin-top: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+}
+.fedd{
+    text-align: center;
+    margin-top: 100px;
+    color: white;
+    
+}
+.feed1{
+    width: 500px;
+    height: 276px;
+    background-image: url("../work/img3.png");
+    margin-left: 92px;
+    margin-top: 100px;
+    padding: 20px;
+    border-radius: 10px;
+    opacity: 40%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.feed2{
+    width: 636px;
+    height: 350px;
+    background-image: url("../work/img3.png");
+    margin-top: -340px;
+    margin-left: 650px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+}
+
+    
+
+
+    
+ 
