--- a/work/work1.css
+++ b/work/work1.css
@@ -39,7 +39,7 @@ header button{
   .container{ 
      width: 1296px; 
      height: 600px; 
-     background-image: url("../work/Logo.png"); 
+     background-image: url("../work/img/Logo.png"); 
      margin:30px auto 0 auto; 
      display: flex;
      align-items: center;
@@ -62,7 +62,7 @@ header button{
     
 }
 .div1{
-    background-image: url("../work/img.png");
+    background-image: url("../work/img/img.png");
     width: 416px; 
     height: 540px; 
     margin-left: 312px;
@@ -72,7 +72,7 @@ header button{
     border-radius: 10px;
 }
 .div2{
-    background-image: url("../work/img2.png");
+    background-image: url("../work/img/img2.png");
     width: 416px;
     height: 258px;
     margin-left: 752px;
@@ -85,7 +85,7 @@ header button{
 .div3{
 width: 416px;
 height: 258px;
-background-image: url("../work/img2.png");
+background-image: url("../work/img/img2.png");
 margin-left: 752px;
 margin-top: 20px;
 display: flex;
@@ -96,7 +96,7 @@ border-radius: 10px;
 .div4{
     width: 416px;
     height: 258px;
-    background-image: url("../work/img2.png");
+    background-image: url("../work/img/img2.png");
     margin-left: 1192px;
     margin-top: -536px;
     display: flex;
@@ -107,7 +107,7 @@ border-radius: 10px;
 .div5{
     width: 416px;
     height: 258px;
-    background-image: url("../work/img2.png");
+    background-image: url("../work/img/img2.png");
     margin-left: 1192px;
     margin-top: 20px;
     display: flex;
@@ -127,7 +127,7 @@ border-radius: 10px;
 .feed1{
     width: 500px;
     height: 276px;
-    background-image: url("../work/img3.png");
+    background-image: url("../work/img/img3.png");
     margin-left: 92px;
     margin-top: 100px;
     padding: 20px;
@@ -140,7 +140,7 @@ border-radius: 10px;
 .feed2{
     width: 640px;
     height: 350px;
-    background-image: url("../work/img3.png");
+    background-image: url("../work/img/img3.png");
     margin-top: -340px;
     margin-left: 660px;
     display: flex;
@@ -152,7 +152,7 @@ border-radius: 10px;
 .feed3{
     width: 500px;
     height: 276px;
-    background-image: url("../work/img4.png");
+    background-image: url("../work/img/img3.png");
     margin-top: -330px;
     margin-left: 1328px;
     border-radius: 10px;
