--- a/work/ttt.css
+++ b/work/ttt.css
@@ -1,12 +1,58 @@
 .my-element {
     background-color: blue;
-    width: 300px;
+    width: 100px;
     height: 100px;
-    transition:  all 0.7s linear ;
+    transition:  all 0.5s ;
+    color: white;
+    text-align: center;
+    
 }
 .my-element:hover {
-    background-color: red;
-   
-    height: 300px;
+    background-color: rgba(255, 0, 0, 0);
+   color: black;
+    height: 100px;
+    width: 200px;
+}
+.el{
+    margin: 100px auto 0 auto;
+    height: 200px;
+    width: 200px;
+    background-color: rgba(0, 0, 0, 0.651);
+    transition: all 1s linear
+}
+.el:hover{
+    transform: rotate(360deg) ;
+    background-color: brown;
+    
 
+}
+.wrap{
+    display: flex;
+    justify-content: center;
+    align-items:center ;
+    position: relative;
+    perspective: 1000px;
+}
+h1{
+    position: absolute;
+    z-index: -1;
+}
+.door{
+    width: 300px;
+    height: 300px;
+    background-color: red;
+    transition: all 1s;
+}
+.door_left{
+    transform-origin: left;
+    perspective: 500px;
+}
+.door_right{
+    transform-origin: right;
+}
+.wrap:hover .door_left{
+    transform: rotateY(50deg);
+}
+.wrap:hover .door_right{
+    transform: rotateY(-50deg);
 }
