--- a/human.css
+++ b/human.css
@@ -86,19 +86,28 @@ hr{
     text-align: center;
     padding-top: 100px;
     color: white;
+    margin-left: 25px;
 }
 .shower button{
     background-color: #E1FF32;
     width: 683px;
     height: 60px;
     margin-top: 450px;
-    margin-left: -27px;
+    margin-left: px;
 }
 .summer{
     width: 682.5px;
     height: 682.5px;
     background-image: url("./img/Rectangle\ \(2\).png");
-    margin-left: 689px;
-    margin-top: -805px;
-    
+    margin-left: 730px;
+    margin-top: -783px;
+    text-align: center;
+    padding-top: 100px;
+    color: white;
+}
+.summer button{
+    background-color: #E1FF32;
+    width: 683px;
+    height: 60px;
+    margin-top: 450px;
 }
